# spacetraders

./: .env.example  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE  docker-compose.yml  go.mod  go.sum  main.go
pkg/clients/openapi/: BUILD.bazel  README.md  api_agents.go  api_contracts.go  api_factions.go  api_fleet.go  api_systems.go  client.go  model_accept_contract_200_response.go  model_accept_contract_200_response_data.go  model_agent.go  model_chart.go  model_connected_system.go  model_contract.go  model_contract_deliver_good.go  model_contract_payment.go  model_contract_terms.go  model_cooldown.go  model_create_chart_201_response.go  model_create_chart_201_response_data.go  model_create_ship_ship_scan_201_response.go  model_create_ship_ship_scan_201_response_data.go  model_create_ship_system_scan_201_response.go  model_create_ship_system_scan_201_response_data.go  model_create_ship_waypoint_scan_201_response.go  model_create_ship_waypoint_scan_201_response_data.go  model_create_survey_201_response.go  model_create_survey_201_response_data.go  model_deliver_contract_200_response.go  model_deliver_contract_200_response_data.go  model_deliver_contract_request.go  model_dock_ship_200_response.go  model_extract_resources_201_response.go  model_extract_resources_201_response_data.go  model_extract_resources_request.go  model_extraction.go  model_extraction_yield.go  model_faction.go  model_faction_symbols.go  model_faction_trait.go  (+119 more)
pkg/clients/openapi/.openapi-generator/: FILES
pkg/clients/openapi/api/: openapi.yaml
pkg/clients/openapi/docs/: Agent.md  AgentsAPI.md  ContractsAPI.md  DefaultAPI.md  FactionsAPI.md  FleetAPI.md  SystemsAPI.md
pkg/clients/openapi/test/: api_fleet_test.go  api_systems_test.go
pkg/cmd/: BUILD.bazel  common.go  playground.go  root.go  serve.go
pkg/dom/: BUILD.bazel  error.go  user.go
pkg/errors/: BUILD.bazel  errors.go
pkg/repository/: conf.go  repository.go
pkg/repository/mongo/: BUILD.bazel  conf.go  repository.go
pkg/service/: BUILD.bazel  service.go
pkg/static/: BUILD.bazel  const.go
