load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:proto disable_global
gazelle(name = "gazelle")

go_library(
    name = "space-traders-playground_lib",
    srcs = ["main.go"],
    importpath = "space-traders-playground",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cmd"],
)

go_binary(
    name = "space-traders-playground",
    embed = [":space-traders-playground_lib"],
    visibility = ["//visibility:public"],
)
