load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "space-traders-playground/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clients/openapi",
        "//pkg/dom",
        "//pkg/errors",
        "//pkg/repository/mongo",
        "@org_uber_go_zap//:go_default_library",
    ],
)
