load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mongo",
    srcs = [
        "conf.go",
        "repository.go",
    ],
    importpath = "space-traders-playground/pkg/repository/mongo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dom",
        "//pkg/static",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
